--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -14,12 +14,12 @@
     </main>
 
     {%- include footer.html -%}
-
+    <div> Just a check</div>
+    
+    <script src=”https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script type="text/javascript" id="MathJax-script" async
+    src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+    </script>
   </body>
-
 </html>
 
-<script src=”https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-<script type="text/javascript" id="MathJax-script" async
-src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
-</script>
